<resources>
    <string name="app_name">Sign In UI</string>

    <string name="email_password_welcome">Welcome!</string>
    <string name="email_password_intro">Get the best from our app</string>
    <string name="email_password_email">Email Address</string>
    <string name="email_password_password">Password</string>
    <string name="email_password_forgot_password">Forgot Password</string>
    <string name="email_password_login_button">Login</string>
    <string name="email_password_cancel_button">@android:string/cancel</string>
    <string name="email_password_pin_login">Use Pin</string>
    <string name="email_password_fingerprint_login">Use Fingerprint</string>
    <string name="email_pin_login">Use Password</string>
    <string name="email_pin_fingerprint_login">Use Fingerprint</string>
    <string name="error_email_password_blank_email">Email cannot be blank</string>
    <string name="error_email_password_invalid_email_format">Email has invalid format</string>
    <string name="error_email_password_blank_password">Password cannot be blank</string>
    <string name="error_email_password_invalid_password_length">Password cannot be shorter than %d</string>


    <!--    pin activity screen-->
    <string name="pin_zero">0</string>
    <string name="pin_one">1</string>
    <string name="pin_two">2</string>
    <string name="pin_three">3</string>
    <string name="pin_four">4</string>
    <string name="pin_five">5</string>
    <string name="pin_six">6</string>
    <string name="pin_seven">7</string>
    <string name="pin_eight">8</string>
    <string name="pin_nine">9</string>
    <string name="pin_ten">10</string>
    <string name="pin_enter_pin_prompt">Enter Pin</string>
    <string name="pin_cancel">Cancel</string>
    <string name="error_pin_blank_pin">Pin cannot be blank</string>
    <string name="error_pin_invalid_pin_length">Pin cannot be less than %d</string>

    <!--    finger print values-->
    <string name="fingerprint_prompt_button">Prompt Fingerprint</string>
    <string name="error_fingerprint_not_present">Sorry. Your device does not support fingerprint sign in</string>
    <string name="error_fingerprint_not_setup">Please setup your fingerprint in settings to use this feature</string>
    <string name="error_fingerprint_not_available">Fingerprint features are currently unavailable.</string>
    <string name="fingerprint_password_login">Use Password</string>


</resources>
