<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="24dp"
    android:gravity="center_vertical"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/email_password_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_password_welcome"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/email_password_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_password_intro"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_below="@id/email_password_welcome"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/email_password_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_password_intro"
        android:layout_marginTop="60dp"
        android:elevation="4dp"
        style="@style/editTextDrawableTheme"
        android:hint="@string/email_password_email"
        android:drawableLeft="@drawable/ic_person_outline_accent_24dp"/>


    <EditText
        android:id="@+id/email_password_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_password_email_field"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        style="@style/editTextDrawableTheme"
        android:hint="@string/email_password_password"
        android:drawableLeft="@drawable/ic_lock_outline_accent_24dp"/>


    <Button
        android:id="@+id/email_password_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_password_password_field"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_bg"
        android:text="@string/email_password_login_button"
        android:textColor="@android:color/white"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"/>

    <TextView
        android:id="@+id/email_password_pin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_password_pin_login"
        android:layout_below="@id/email_password_login_button"
        android:layout_marginTop="30dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/email_password_fingerprint_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_password_fingerprint_login"
        android:layout_below="@id/email_password_login_button"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>